Last small fixes.

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1,3 +1,8 @@
+@Article{chris-collins,
+author = {Chris Collins},
+title = {A Comparative Analysis of Mark 1, Colossus and Zuse Z4},
+year = {2006}
+}
 @Book{robert-lewand,
 author = { Robert Edward Lewand},
 title = {Cryptological Mathematics},
@@ -63,3 +68,9 @@ title = {Provably Secure Pseudo-Random Generators, A Literary Study},
 school = {The Royal Institute of Technology}
 }
 
+@Article{jennifer-wilcox,
+author = {Jennifer Wilcox},
+title = {Solving the Enigma: History of the Cryptanalytic Bombe},
+year = {2006},
+school = {National Security Agency:Center for Cryptologic History}
+}
