--- a/editaveis/abstract.tex
+++ b/editaveis/abstract.tex
@@ -1,6 +1,7 @@
 \begin{resumo}[Abstract]
  \begin{otherlanguage*}{english}
-	In cryptography there are two ways to cipher a text: with symmetric key and assymmetric key. The symmetric key is divided in  block cipher and stream cipher. One failure that is well explored by attackers that wish to break a cipher text is the frequency analysis, because a lot of the existing algorithms don't worry about balancing the cipher text. This course conclusion work presents an algorithm proposition that will perform the complete balancing of the cipher text, improving your secuity against attackers and curious. 
+The cryptography has two ways to encrypt a text using symmetric key and asymmetric key. The algorithm using symmetric key algorithms are divided into block cipher and stream cipher. A failure much exploited by attackers who wish to break a cipher text is the analysis of frequency of occurrence of the same characters, because the medium frequency of occurrence is known for each language and many of the algorithms do not worry about balancing this frequency while encrypting the text. 
+This course conclusion work proposes a algorithm that will perform the complete balancing of the frequency of characters, increasing their security against attackers and curious. 
    \vspace{\onelineskip}
  
    \noindent 
