--- a/capitulos/1-introducao.tex
+++ b/capitulos/1-introducao.tex
@@ -1,18 +1,22 @@
 \chapter{Introdução}
 \label{introduction}
 
-Desde tempos anciões, segredos sempre existiram e métodos para deixa-los indecifráveis foram construídos. Enquanto algumas pessoas estavam escondendo informações, outras curiosos estavam tentando quebra-los. ~\cite{alexander-maximov} %ok
+Desde tempos remotos, segredos sempre existiram e métodos para deixa-los indecifráveis foram construídos. Enquanto algumas pessoas estavam escondendo informações, outras curiosas estavam tentando quebrá-los. ~\cite{alexander-maximov} %ok
 
-Na constante luta entre manter e quebrar segredos, métodos foram desenvolvidos para se esconder informações e falhas nesses métodos foram exploradas para se obter as informações.
+Na constante luta entre manter e quebrar segredos, métodos foram desenvolvidos para se esconder informações e falhas nesses métodos foram exploradas para se obter as informações. 
 
-Um dos métodos para obter informações sem a autorização necessária é a análise de frequência dessas informações escondidas. Com essa análise, é possível se obter as informações. Há estudos que indicam a frequência média em que cada letra é utilizada em um texto e com isso é possível ter acesso a mensagem que deveria ser um segredo. 
+Um dos métodos para obter informações sem a autorização necessária é a análise de frequência da ocorrência de caracteres dessas informações escondidas. Há estudos que indicam qual a frequência média de utilização de cada letra em um texto. Analisando um texto cifrado e calculando a frequência de ocorrencia dos caracteres do mesmo, pode ser possível, através da substituição dos mesmos pelos caracteres com frequência similar da língua, quebrar a cifragem utilizada e ter acesso à mensagem original.
+
+\section{Problema}
+
+Como há a possibilidade de se obter as informações simplesmente analisando a frequência de ocorrência de caracteres, isso torna a comunicação insegura. Como consequência, o principal objetivo de se utilizar o algoritmo criptográfico, que é proteger informações importantes, torna-se obsoleto.  
 
 \section{Objetivos do Trabalho}
 \label{paper-objectives}
 
 \subsection{Objetivo Geral}
 \label{general-objective}
-Esse trabalho visa apresentar um algoritmo para dificultar a análise de frequência de um texto e  assim se comunicar seguramente e privadamente.
+Esse trabalho visa apresentar um algoritmo de criptografia que dificulte a análise de frequência de um texto permitindo assim a comunicação privada e segura.
 
 \subsection{Objetivos Específicos}
 \label{specifics-objectives}
@@ -27,10 +31,12 @@ Esse trabalho visa apresentar um algoritmo para dificultar a análise de frequê
 \section{Organização do Trabalho}
 \label{paper-organization}
 
-O trabalho tem a seguinte organização: no capítulo \ref{cryptograhy} é apresentado os principais tipos de algoritmos criptográficos incluindo a descrição de exemplo dos mesmos e também é descrito métodos de criptoanálise.
+Este trabalho tem a seguinte organização:
 
-No capitulo \ref{pseudo-random-number-generator} é descrito o que é um gerador de números pseudo-aleatórios, alguns exemplos e suas implementações e é explicado a importância desses geradores para a criptografia. 
+No capítulo \ref{cryptograhy} são apresentados os principais tipos de algoritmos criptográficos, incluindo suas descrições e exemplos, assim como são descritos métodos de criptoanálise.
 
-No capitulo \ref{algorithm-proposition} é explicado a proposta do algoritmo com suas soluções, explicação do seu funcionamento e as principais vantagens em relação a outros algoritmos.
+No capitulo \ref{pseudo-random-number-generator} é descrito o que é um gerador de números pseudo-aleatórios, alguns exemplos e suas implementações e é explicada a importância desses geradores para a criptografia. 
 
-No capitulo \ref{conclusion} a conclusão desse trabalho é apresentada e a descrição de trabalhos futuros e suas importâncias são descritas. 
+No capitulo \ref{algorithm-proposition} é explicada a proposta do algoritmo com suas soluções, seu funcionamento e as principais vantagens em relação a outros algoritmos.
+
+No capitulo \ref{conclusion} a conclusão desse trabalho é apresentada a conclusão deste trabalho, a descrição dos trabalhos futuros e suas importâncias.
