--- a/editaveis/resumo.tex
+++ b/editaveis/resumo.tex
@@ -1,5 +1,5 @@
 \begin{resumo}
-A criptografia tem duas formas principais para cifrar um texto utilizando chave simétrica e chave assimétrica. Os algoritmo que utilizam chave simétrica são divididos em algoritmos de cifra de bloco e cifra de fluxo. Uma falha muito explorada por atacantes que desejam quebrar um texto cifrado é a análise de frequência de ocorrência dos caracteres do mesmo, pois a frequência média de ocorrência é conhecida para cada língua e muitos dos algoritmos não se preocupam com o balanceamento dessa frequência enquanto cifrando o texto. 
+A criptografia tem duas formas principais para cifrar um texto utilizando chave simétrica e chave assimétrica. Os algoritmos que utilizam chave simétrica são divididos em algoritmos de cifra de bloco e cifra de fluxo. Uma falha muito explorada por atacantes que desejam quebrar um texto cifrado é da análise de frequência de ocorrência dos caracteres do mesmo, pois a frequência média de ocorrência é conhecida para cada língua e muitos dos algoritmos não se preocupam com o balanceamento dessa frequência enquanto cifrando o texto. 
 Este trabalho de conclusão de curso apresenta uma proposta de algoritmo que irá realizar o balanceamento completo da frequência de caracteres, aumentando sua segurança contra atacantes e curiosos.
 
  \vspace{\onelineskip}
