--- a/capitulos/1-introducao.tex
+++ b/capitulos/1-introducao.tex
@@ -1,7 +1,7 @@
 \chapter{Introdução}
 \label{introduction}
 
-Desde tempos remotos, segredos sempre existiram e métodos para deixa-los indecifráveis foram construídos. Enquanto algumas pessoas estavam escondendo informações, outras curiosas estavam tentando quebrá-los. ~\cite{alexander-maximov} %ok
+Desde tempos remotos, segredos sempre existiram e métodos para deixá-los indecifráveis foram construídos. Enquanto algumas pessoas estavam escondendo informações, outras curiosas estavam tentando descobrí-los. ~\cite{alexander-maximov} %ok
 
 Na constante luta entre manter e quebrar segredos, métodos foram desenvolvidos para se esconder informações e falhas nesses métodos foram exploradas para se obter as informações. 
 
@@ -39,4 +39,4 @@ No capitulo \ref{pseudo-random-number-generator} é descrito o que é um gerador
 
 No capitulo \ref{algorithm-proposition} é explicada a proposta do algoritmo com suas soluções, seu funcionamento e as principais vantagens em relação a outros algoritmos.
 
-No capitulo \ref{conclusion} a conclusão desse trabalho é apresentada a conclusão deste trabalho, a descrição dos trabalhos futuros e suas importâncias.
+No capitulo \ref{conclusion} é apresentada a conclusão deste trabalho, a descrição dos trabalhos futuros e suas importâncias.
