--- a/capitulos/5-algoritmo.tex
+++ b/capitulos/5-algoritmo.tex
@@ -14,9 +14,11 @@ O algoritmo proposto neste trabalho visa diminuir as possibilidades de análises
 \section{Funcionamento}
 \label{functioning}
 
-O algoritmo terá como entrada uma sequência de números pseudo-aleatórios e terá como objetivo produzir um texto cifrado onde as frequências de ocorrência dos caracteres é totalmente balanceada.
+O algoritmo de cifração terá como entrada um texto em claro e uma sequência de números pseudo-aleatórios e terá como objetivo produzir um texto cifrado onde as frequências de ocorrência dos valores de \textit{bytes} cifrados seja totalmente balanceada.
 
-A cada \textit{byte} de texto em claro será feito um ou-exclusivo com o número na posição correspondente da sequência e com isso vai se preenchendo uma tabela de equalização de \textit{bytes} que tem posições de 0 a 255.
+O mecanismo utilizado para este balanceamento será produzir o texto cifrado em “rodadas” de 256 \textit{bytes} em que cada valor de \textit{byte} cifrado só aparece uma vez por rodada. Isto é, os 256  \textit{bytes} cifrados de cada rodada são distintos, porém a ordem em que aparecem em cada rodada é aleatória (ou melhor dizendo, pseudo-aleatória).
+
+Para se garantir que nenhum valor de \textit{byte} cifrado se repita em uma rodada utiliza-se uma tabela de 256 posições. No início da rodada a tabela tem todas a suas 256 posições marcadas como não ocupadas. Para cada \textit{byte} de texto em claro que se deseja cifrar será feito um ou-exclusivo com o valor correspondente fornecido pelo gerador de números aleatórios resultando no \textit{byte} pré-cifrado. Tendo-se obtido o \textit{byte} pré-cifrado verifica-se se este valor já está ocupado na tabela. 
 
 \begin{figure}[h]
 	\centering
@@ -24,7 +26,18 @@ A cada \textit{byte} de texto em claro será feito um ou-exclusivo com o número
 	\caption{Tabela de \textit{byte} para uso do algoritmo}
 \end{figure}
 
-Como o resultado deverá ser totalmente balanceado, há a possibilidade de se produzir um resultado em uma posição na tabela já ocupada. Para contornarmos esse problema, propomos a seguinte solução: a introdução da variável \textbf{j} e um \textit{byte} da tabela de equalização que servirá para indicar que houve um conflito na cifra e se chamará de \textbf{sinal}.
+Caso o valor do \textit{byte} pré-cifrado obtido corresponda a uma posição já ocupada na tabela, este valor não será aceito como \textit{byte} cifrado e o próximo valor da sequência pseudo-aleatória será utilizado para tentar novamente a cifração do \textit{byte} em claro. Este procedimento será repetido até que o valor pré-cifrado obtido corresponda a uma posição não ocupada na tabela, quando então este valor será aceito como o \textit{byte} cifrado (correspondente ao byte de texto em claro que está sendo processado pelo cifrador). O número de valores da sequência pseudo-aleatória não utilizados será contabilizado em uma variável j. 
+
+Caso o valor do \textit{byte} pré-cifrado obtido corresponda a uma posição não ocupada na tabela, este valor será aceito como \textit{byte} cifrado, a posição correspondente na tabela será marcada como ocupada, e a variável j será reinicializada com o valor 0.
+
+Aqui se introduz o problema de como enviar ao decifrador as seguintes informações:
+
+\begin{enumerate}
+	\item Que houve um conflito na cifração ( quando o mesmo ocorrer)
+	\item Em ocorrendo o conflito, qual o número de valores na sequência pseudo-aleatória deverão ser desprezados na decifração.
+\end{enumerate}
+
+Para informar ao decifrador que houve um conflito na cifração propomos a utilização de um valor de \textit{byte} entre 0 e 255 chamado de \textbf{sinal}. Este valor será enviado pelo cifrador como parte da sequência de \textit{bytes} cifrados indicando ao decifrador que o \textit{byte} seguinte na sequência de \textit{bytes} cifrados corresponderá ao número de valores da sequência produzida pelo gerador pseudo-aleatório que deverão ser desprezados.  Após o envio do \textit{byte} de sinal, o cifrador  enviará o valor da variável j (também cifrado), e finalmente enviará o \textit{byte} cifrado.
 
 \begin{figure}[h]
 	\centering
@@ -32,7 +45,7 @@ Como o resultado deverá ser totalmente balanceado, há a possibilidade de se pr
 	\caption{Esquema do algoritmo de cifração}
 \end{figure}
 
-A variável \textbf{j} visa quantificar os números pseudo-aleatórios que deverão ser descartados na produção do texto cifrado e com isso o receptor da mensagem terá a possibilidade de recuperar a mensagem original com sucesso. O processo de cifração, que pode ser visto no pseudo-código na figura \ref{pseudo-codigo}, segue os seguintes caminhos:
+O processo de cifração, que pode ser visto no pseudo-código na figura \ref{pseudo-codigo}, segue os seguintes caminhos:
 
 \begin{figure}[h]
 	\centering
@@ -41,16 +54,17 @@ A variável \textbf{j} visa quantificar os números pseudo-aleatórios que dever
 	\label{pseudo-codigo}
 \end{figure}
 
-O caminho ideal é o que o resultado da operação ou-exclusivo entre o \textit{byte} do texto em claro e o número aleatório correpondente sempre seja igual a uma posição livre na tabela de balanceamento.
+O caminho ideal é o que o resultado da operação ou-exclusivo entre o \textit{byte} do texto em claro e o número aleatório correpondente sempre corresponda a uma posição livre na tabela de balanceamento.
 
-Caso se detecte um conflito de resultados na tabela de balanceamento, é enviado o sinal para o receptor da mensagem, pois com isso o receptor saberá que o próximo valor recebido será a quantidade de números pseudo-aleatórios que deverão ser descartados da sequência. Esse sinal irá ser cifrado com o valor do número aleatório que gerou o conflito. Então o algoritmo vai executar o comando de descartar os números pseudo-aleatórios, até que se encontre um resultado em uma posição que esteja livre na tabela de balanceamento. Ao encontrar essa posição livre, o algoritmo deverá enviar o resultado do ou-exclusivo entre j(quantidade de números descartados) e S$_{old}$ e o valor de j é novamente estabelecido como 0.
+Caso se detecte um conflito de resultados na tabela de balanceamento, é enviado o \textit{byte} de sinal para o receptor da mensagem, pois com isso o receptor saberá que o próximo valor recebido será a quantidade de números pseudo-aleatórios que deverão ser descartados da sequência. 
 
-Quando a tabela for totalmente concluída, o processo se inicia de novo e suas posições ficam livres com exceção do novo sinal e o algoritmo continua com o processo de preenche-la novamente. Esse processo só finaliza quando os bytes do texto em claro forem todos cifrados. O processo de estabelecer o valor do sinal será feito da seguinte forma:
+Então o algoritmo vai executar o comando de descartar os números pseudo-aleatórios, até que se encontre um resultado em uma posição que esteja livre na tabela de balanceamento. 
 
-\begin{enumerate}
-	\item Para a primeira rodada\footnote{Processo de completar a tabela de equalização.}, o sinal será o primeiro valor produzido pelo gerador de números aleatórios.
-	\item A partir da segunda rodada, o sinal será o último \textit{byte} cifrado da rodada anterior. 
-\end{enumerate}
+Ao encontrar essa posição livre, o algoritmo (no lado da cifração) enviará o byte de sinal (sem cifrar) e em seguida enviará o resultado do ou-exclusivo entre \textbf{j} (quantidade de números descartados) e S$_{old}$. Então o valor de \textbf{j} é novamente reinicializado como 0.
+
+Quando a tabela for totalmente concluída, a rodada termina e o processo se inicia de novo com uma nova rodada, reinicializando-se a tabela (todas as suas posições são marcadas como desocupadas). Esse processo termina quando os \textit{bytes} do texto em claro forem todos cifrados. A cada rodada o \textit{byte} de sinal terá um valor diferente. Escolhemos o primeiro \textit{byte} da sequência de números pseudo-aleatórios da rodada como o \textit{byte} de sinal. Este valor será também o último valor de \textit{byte} cifrado a ser enviado na rodada.
+
+Quando terminarem os \textit{bytes} de texto em claro a serem cifrados, o cifrador envia novamente o valor do \textit{byte} de sinal da última rodada, indicando ao decifrador que o processo de cifração/decifração terminou.
 
 \begin{figure}[h]
 	\centering
@@ -58,7 +72,7 @@ Quando a tabela for totalmente concluída, o processo se inicia de novo e suas p
 	\caption{Esquema do algoritmo de decifração}
 \end{figure}
 
-Podemos observar o processo de decifrar na figura \ref{pseudo-codigo-decifrar}. É um processo diferente do processo de cifrar, pois não inclui a tabela de balanceamento e assim o processo de balanceamento não se faz necessário. Entretanto, para decifrar é necessário ter a capacidade de produzir a mesma sequência de números aleatórios e, portanto, ter a mesma chave que foi utilizada no processo de cifrar. 
+Podemos observar o processo de decifração na figura \ref{pseudo-codigo-decifrar}. Neste não é necessário se utilizar a tabela de balanceamento. Para se realizar a decifração é necessário que o decifrador tenha a capacidade de produzir a mesma sequência de números aleatórios que o cifrador. Isto implica que ele deve ter a mesma chave que foi utilizada no processo de cifrar.
 
 
 \begin{figure}[h]
@@ -68,12 +82,18 @@ Podemos observar o processo de decifrar na figura \ref{pseudo-codigo-decifrar}. 
 	\label{pseudo-codigo-decifrar}
 \end{figure}
 
-O primeiro passo da decifração é realizar a função ou-exclusivo entre o \textit{byte} do texto cifrado e o número aleatório correspondente. O caminho ideal é que o resultado dessa operação seja diferente do sinal, pois assim, esse resultado é o \textit{byte} do texto em claro.
+No início de cada rodada na decifração, o primeiro \textit{byte} da sequência aleatória é separado como o \textit{byte} de sinal. Os valores pseudo-aleatórios seguintes serão usados no processo de decifração. O primeiro passo no processo de decifração é comparar o \textit{byte} cifrado recebido com o valor de sinal utilizado na rodada. 
 
-Se o resultado da operação ou-exclusivo entre \textit{byte} do texto cifrado e o número aleatório for igual a \textit{byte} que foi denominado para aquela rodada ser o sinal, isso quer dizer que o próximo \textit{byte} do texto cifrado será o resultado da variável \textbf{j}, que indica quantos números aleatórios devem ser descartados para o processo de decifração. Ao se descartar esses números, o processo volta para o percurso normal de execução. 
+Se o valor do \textit{byte} cifrado for diferente do valor do sinal utilizado na rodada, realiza-se a operação ou-exclusivo entre o \textit{byte} cifrado e o valor fornecido pelo gerador pseudo-aleatório, obtendo-se assim o \textit{byte} de texto em claro correspondente.
+
+Se o valor do \textit{byte} cifrado for igual ao \textit{byte} de sinal utilizado na rodada, isso quer dizer que o próximo \textit{byte} do texto cifrado conterá o valor da variável \textbf{j} enviado pelo cifrador, que indica quantos números aleatórios devem ser descartados para o processo de decifração. Ao se descartar esses números, realiza-se a decifração do \textit{byte} cifrado e o processo de decifração volta ao curso normal de execução.
+
+Após cada decifração o valor de \textbf{d} é incrementado. A variável \textbf{d} é responsável para determinar quando a rodada em questão finalizou. Quando o contador \textbf{d} for igual a 255, uma nova rodada se inicia e então o próximo valor da sequência de números aleatórios é separado como o novo \textit{byte} de sinal para a próxima rodada e a variável d é reinicializada com valor 0.
+
+Para definir se o processo de decifração terminou, o decifrador testa se o primeiro \textit{byte} cifrado da rodada seguinte recebido é igual ao \textit{byte} de sinal da rodada anterior. Se for igual isto significa que a decifração terminou. Se não for igual, tem-se uma nova rodada.
 
 \section{Vantagens}
 
-A maior vantagem desse algoritmo é que, por ser muito genérico, isso resulta que não importa qual gerador de números pseudo-aleatório será utilizado. 
+A maior vantagem desse algoritmo é a equalização das frequências de ocorrência de cada valor de texto cifrado enviado. Excluindo-se os valores dos bytes de sinal e os valores dos números de sequência pseudo-aleatórios a serem desprezados na decifração, a frequência de cada valor possivel dos \textit{bytes} de texto cifrado será idêntica. Isto é, o algoritmo produz um texto cifrado perfeitamente balanceado.
 
-Outra vantagem é que a utilização desse algoritmo pode ser combinada com outro algoritmo de cifração de fluxo, aumentando a segurança do texto cifrado.
+Outra vantagem do algoritmo de balanceamento de frequência proposto é que ele é totalmente genérico.  Isto é, ele funciona com qualquer gerador de números pseudo-aleatórios e algoritmos de cifra de fluxo, tais como: A5/1, A5/2, E0, RC4, Blum Blum Shub, Blum Micali, etc.
